--- a/Data Analysis.ipynb
+++ b/Data Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "efb6e027",
+   "id": "064c9441",
    "metadata": {},
    "source": [
     "# libraries"
@@ -10,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "fbbd0c81",
+   "execution_count": 2,
+   "id": "e68e2eae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d64e13b5",
+   "id": "ca13e1ca",
    "metadata": {},
    "source": [
     "# Data Access\n",
@@ -32,8 +32,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "8dc4a2fa",
+   "execution_count": 3,
+   "id": "f87eadc6",
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
        "4  December 25, 2017  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,8 +138,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "8d1b7ec6",
+   "execution_count": 4,
+   "id": "d20613fd",
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
        "4  December 29, 2017   "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d208f2c4",
+   "id": "527c1ea3",
    "metadata": {},
    "source": [
     "# Data cleaning\n",
@@ -253,8 +253,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "fa9fdaa2",
+   "execution_count": 5,
+   "id": "4bdd716a",
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +309,7 @@
        "0  December 31, 2017    True  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,8 +322,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "bf807e9c",
+   "execution_count": 6,
+   "id": "19177378",
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
        "0  December 31, 2017    False  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,8 +390,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "6e0719a4",
+   "execution_count": 7,
+   "id": "69b48532",
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +559,7 @@
        "[44898 rows x 5 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -571,8 +571,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "59cab537",
+   "execution_count": 8,
+   "id": "e4d29965",
    "metadata": {},
    "outputs": [
     {
@@ -601,8 +601,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "ab8152a1",
+   "execution_count": 9,
+   "id": "31e0bc97",
    "metadata": {},
    "outputs": [
     {
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd6c0899",
+   "id": "f29096e2",
    "metadata": {},
    "source": [
     "Nous pouvons voir que les données ne sont toutes du meme format, il va falloire changer cela. Nous pouvons identifier 3 formats qui ne respectent pas la forme suivante \"Mois :\n",
@@ -645,8 +645,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "92fa4fd5",
+   "execution_count": 10,
+   "id": "118cb9d2",
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +666,7 @@
        "Name: date, Length: 44898, dtype: object"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -679,8 +679,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "d262e846",
+   "execution_count": 11,
+   "id": "e8d35427",
    "metadata": {},
    "outputs": [
     {
@@ -733,7 +733,7 @@
        " 21870]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -753,7 +753,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14b16239",
+   "id": "1990d060",
    "metadata": {},
    "source": [
     "Nous avons donc identifié que certaines données ne sont pas dans le format adéquat, nous avons 2 cas à traité:\n",
@@ -764,8 +764,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "d2f9a0e0",
+   "execution_count": 12,
+   "id": "9b7b6d58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f2dd001",
+   "id": "c5ee4cd6",
    "metadata": {},
    "source": [
     "#nous avons donc modifié les formats des dates de D-M-Y.\n",
@@ -792,8 +792,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "2faf42b7",
+   "execution_count": 13,
+   "id": "1127795f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -803,8 +803,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "588b5d36",
+   "execution_count": 14,
+   "id": "9af7f389",
    "metadata": {},
    "outputs": [
     {
@@ -813,7 +813,7 @@
        "array([False,  True])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c143ebc",
+   "id": "60dcce10",
    "metadata": {},
    "source": [
     "Nous avons prouvé que il existe des nan values, donc nous allons eliminer les lignes."
@@ -833,8 +833,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "34959965",
+   "execution_count": 15,
+   "id": "b437f538",
    "metadata": {},
    "outputs": [
     {
@@ -843,7 +843,7 @@
        "array([False])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52a8ebe3",
+   "id": "f990c2a1",
    "metadata": {},
    "source": [
     "Nous avons donc clean la colonne date. Nous verifions les autres colonnes."
@@ -864,8 +864,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "3d4ac4b8",
+   "execution_count": 16,
+   "id": "66a64f7e",
    "metadata": {},
    "outputs": [
     {
@@ -874,7 +874,7 @@
        "Index(['title', 'text', 'subject', 'date', 'isFake'], dtype='object')"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -885,29 +885,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "50e327bf",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([False])"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.title.isnull().unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 17,
-   "id": "90326a34",
+   "id": "28eb1f57",
    "metadata": {},
    "outputs": [
     {
@@ -922,13 +901,13 @@
     }
    ],
    "source": [
-    "df.text.isnull().unique()"
+    "df.title.isnull().unique()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "1b69c554",
+   "id": "5b95fb9c",
    "metadata": {},
    "outputs": [
     {
@@ -943,12 +922,33 @@
     }
    ],
    "source": [
+    "df.text.isnull().unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "6e398707",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([False])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "df.subject.isnull().unique()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "55124672",
+   "id": "b936e125",
    "metadata": {},
    "source": [
     "Notre dataset est près à l'emplois."
@@ -956,7 +956,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d2d5fb2",
+   "id": "c13c921f",
    "metadata": {},
    "source": [
     "# Data analysis + Visualisation\n",
@@ -1013,28 +1013,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "36b4277d",
+   "metadata": {},
+   "source": [
+    "**Combien de catégories uniques de \"subject\" existent-elles ?**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "e2d16a87",
+   "execution_count": 20,
+   "id": "35789d0b",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nous avons 8 subjects différents\n"
+      "Nous avons 8 sujets différents\n"
      ]
     }
    ],
    "source": [
-    "#Combien de catégories uniques de \"subject\" existent-elles ?\n",
-    "print(f\"Nous avons {len(df.subject.unique())} subjects différents\")"
+    "print(f\"Nous avons {len(df.subject.unique())} sujets différents\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4da7e2b",
+   "metadata": {},
+   "source": [
+    "**Y a-t-il une distribution inégale des sujets entre les news fake et vraies ?**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "f09c7803",
+   "execution_count": 24,
+   "id": "5a3246bd",
    "metadata": {},
    "outputs": [
     {
@@ -1052,20 +1067,19 @@
        "Name: isFake, dtype: int64"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Y a-t-il une distribution inégale des sujets entre les news fake et vraies ?\n",
     "df.groupby('subject')['isFake'].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "74b318bf",
+   "execution_count": 22,
+   "id": "a53fa9ba",
    "metadata": {},
    "outputs": [
     {
@@ -1095,8 +1109,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "8b6b70b1",
+   "execution_count": 23,
+   "id": "64bfaa6d",
    "metadata": {},
    "outputs": [
     {
@@ -1130,16 +1144,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9984c1e2",
+   "id": "ea3778ce",
    "metadata": {},
    "source": [
-    "La distribution des fake news et des true news est assez biaisé si on les reproupe par subject, il serait envisageable qu'elle ne soit pas un bonne estimateur pour détecter les fake news."
+    "La distribution des fake news et des true news est assez biaisé si on les reproupe par subject, il serait envisageable qu'elle ne soit pas un bonne estimateur pour détecter les fake news. Il serait envisageable:\n",
+    "- Soit enlever des données de la classe majoritaire.\n",
+    "- Soit utiliser des techniques comme SMOTE pour générer des nouvelles données de la classe minoritaire.\n",
+    "- soit enlever la colonne \"subject\" du dataset. (car à la fin, ce sont des news, peut importe d'où elles viennent.)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32a7b745",
+   "id": "060378bc",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1147,7 +1164,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e935ca1",
+   "id": "f19ecd60",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1155,7 +1172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25e1ac9a",
+   "id": "66e111ff",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1163,7 +1180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "021cd847",
+   "id": "90b555ac",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1171,7 +1188,47 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b316e2ad",
+   "id": "6df3fd43",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37b81af9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54dbca42",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37a01583",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d720580c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a28aadea",
    "metadata": {},
    "outputs": [],
    "source": []
