--- a/Data Analysis.ipynb
+++ b/Data Analysis.ipynb
@@ -531,7 +531,7 @@
     }
    ],
    "source": [
-    "# de même pour les données réelles (True)\n",
+    "# De même pour les données réelles (True)\n",
     "nltk.download('stopwords')\n",
     "\n",
     "# Charger la liste des stopwords en anglais\n",
