created all models with BERT tokenizer, trained and evaluated them without clean data.

--- a/model_passive_agressive-BERT.ipynb
+++ b/model_passive_agressive-BERT.ipynb
@@ -590,20 +590,20 @@
      "text": [
       "-- Epoch 1\n",
       "Norm: 0.01, NNZs: 512, Bias: 0.000098, T: 24671, Avg. loss: 1.880353\n",
-      "Total training time: 0.05 seconds.\n",
+      "Total training time: 0.10 seconds.\n",
       "-- Epoch 2\n",
       "Norm: 0.01, NNZs: 512, Bias: 0.000098, T: 49342, Avg. loss: 0.755435\n",
-      "Total training time: 0.13 seconds.\n",
+      "Total training time: 0.27 seconds.\n",
       "-- Epoch 3\n",
       "Norm: 0.01, NNZs: 512, Bias: 0.000098, T: 74013, Avg. loss: 0.692524\n",
-      "Total training time: 0.20 seconds.\n",
+      "Total training time: 0.42 seconds.\n",
       "-- Epoch 4\n",
       "Norm: 0.01, NNZs: 512, Bias: 0.000099, T: 98684, Avg. loss: 0.974523\n",
-      "Total training time: 0.28 seconds.\n",
+      "Total training time: 0.57 seconds.\n",
       "-- Epoch 5\n",
       "Norm: 0.01, NNZs: 512, Bias: 0.000099, T: 123355, Avg. loss: 0.635960\n",
-      "Total training time: 0.36 seconds.\n",
-      "Convergence after 5 epochs took 0.39 seconds\n"
+      "Total training time: 0.71 seconds.\n",
+      "Convergence after 5 epochs took 0.75 seconds\n"
      ]
     },
     {
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "id": "db59a59a",
    "metadata": {},
    "outputs": [],
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "id": "0be3cd04",
    "metadata": {},
    "outputs": [
@@ -696,7 +696,7 @@
        "             scoring=make_scorer(accuracy_score))"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 17,
    "id": "a3843406",
    "metadata": {},
    "outputs": [
@@ -771,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 18,
    "id": "492621ad",
    "metadata": {},
    "outputs": [],
@@ -797,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 19,
    "id": "d4cd440a",
    "metadata": {},
    "outputs": [],
@@ -816,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 20,
    "id": "2bb8cc6f",
    "metadata": {},
    "outputs": [
@@ -826,22 +826,22 @@
      "text": [
       "-- Epoch 1\n",
       "Norm: 0.01, NNZs: 512, Bias: 0.000098, T: 24671, Avg. loss: 1.880353\n",
-      "Total training time: 0.07 seconds.\n",
+      "Total training time: 0.10 seconds.\n",
       "-- Epoch 2\n",
       "Norm: 0.01, NNZs: 512, Bias: 0.000098, T: 49342, Avg. loss: 0.755435\n",
-      "Total training time: 0.18 seconds.\n",
+      "Total training time: 0.25 seconds.\n",
       "-- Epoch 3\n",
       "Norm: 0.01, NNZs: 512, Bias: 0.000098, T: 74013, Avg. loss: 0.692524\n",
-      "Total training time: 0.29 seconds.\n",
+      "Total training time: 0.40 seconds.\n",
       "-- Epoch 4\n",
       "Norm: 0.01, NNZs: 512, Bias: 0.000099, T: 98684, Avg. loss: 0.974523\n",
-      "Total training time: 0.39 seconds.\n",
+      "Total training time: 0.55 seconds.\n",
       "-- Epoch 5\n",
       "Norm: 0.01, NNZs: 512, Bias: 0.000099, T: 123355, Avg. loss: 0.635960\n",
-      "Total training time: 0.50 seconds.\n",
-      "Convergence after 5 epochs took 0.53 seconds\n",
+      "Total training time: 0.70 seconds.\n",
+      "Convergence after 5 epochs took 0.74 seconds\n",
       "Temps d'entrainement (h | m | s) : 0 | 0 | 0\n",
-      "Utilisation de la mémoire (Mo) : 0.00390625\n"
+      "Utilisation de la mémoire (Mo) : 0.0\n"
      ]
     }
    ],
@@ -871,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 21,
    "id": "99903805",
    "metadata": {},
    "outputs": [
@@ -881,7 +881,7 @@
        "((8567,), (8567,))"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -902,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 22,
    "id": "9b00cae3",
    "metadata": {},
    "outputs": [
@@ -933,7 +933,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 23,
+   "id": "1542de40",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True Negative: 35.07645616902066%\n",
+      "False Positive: 14.555853857826545%\n",
+      "False Negative: 10.47040971168437%\n",
+      "True Positive: 39.897280261468424%\n"
+     ]
+    }
+   ],
+   "source": [
+    "#we print the percentage of True Positive, True Negative, False Positive and False Negative\n",
+    "tn, fp, fn, tp = cm.ravel()\n",
+    "total_samples = tn + fp + fn + tp\n",
+    "true_negative_percentage = (tn / total_samples) * 100\n",
+    "false_positive_percentage = (fp / total_samples) * 100\n",
+    "false_negative_percentage = (fn / total_samples) * 100\n",
+    "true_positive_percentage = (tp / total_samples) * 100\n",
+    "\n",
+    "print(f\"True Negative: {true_negative_percentage}%\")\n",
+    "print(f\"False Positive: {false_positive_percentage}%\")\n",
+    "print(f\"False Negative: {false_negative_percentage}%\")\n",
+    "print(f\"True Positive: {true_positive_percentage}%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "id": "71cfc771",
    "metadata": {},
    "outputs": [
@@ -959,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 25,
    "id": "e34ca30c",
    "metadata": {},
    "outputs": [
@@ -986,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 26,
    "id": "b3997bca",
    "metadata": {},
    "outputs": [
@@ -1013,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 27,
    "id": "aca3567c",
    "metadata": {},
    "outputs": [
@@ -1040,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 28,
    "id": "ff22fa74",
    "metadata": {},
    "outputs": [
@@ -1082,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 29,
    "id": "90529cad",
    "metadata": {},
    "outputs": [
@@ -1092,7 +1124,7 @@
        "0.7494233781608055"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1104,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 30,
    "id": "259c0a0f",
    "metadata": {},
    "outputs": [
@@ -1130,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 31,
    "id": "1dbef3f1",
    "metadata": {},
    "outputs": [
@@ -1182,15 +1214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9d323d6d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 32,
    "id": "4a18ebbc",
    "metadata": {},
    "outputs": [
@@ -1264,138 +1288,29 @@
        "4           4  It's primary day in New York and front-runners...    True"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "validation_data=pd.read_csv(\"data/validation_data.csv\")\n",
+    "validation_data=pd.read_csv(\"data/validation_data.csv\",nrows=nrows)\n",
     "validation_data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 33,
    "id": "8df89c5f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>text</th>\n",
-       "      <th>isFake</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Daniel Greenfield, a Shillman Journalism Fello...</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Google Pinterest Digg Linkedin Reddit Stumbleu...</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>U.S. Secretary of State John F. Kerry said Mon...</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>— Kaydee King (@KaydeeKing) November 9, 2016 T...</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>It's primary day in New York and front-runners...</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6330</th>\n",
-       "      <td>The State Department told the Republican Natio...</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6331</th>\n",
-       "      <td>The ‘P’ in PBS Should Stand for ‘Plutocratic’ ...</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6332</th>\n",
-       "      <td>Anti-Trump Protesters Are Tools of the Oligar...</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6333</th>\n",
-       "      <td>ADDIS ABABA, Ethiopia —President Obama convene...</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6334</th>\n",
-       "      <td>Jeb Bush Is Suddenly Attacking Trump. Here's W...</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>6335 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                   text  isFake\n",
-       "0     Daniel Greenfield, a Shillman Journalism Fello...   False\n",
-       "1     Google Pinterest Digg Linkedin Reddit Stumbleu...   False\n",
-       "2     U.S. Secretary of State John F. Kerry said Mon...    True\n",
-       "3     — Kaydee King (@KaydeeKing) November 9, 2016 T...   False\n",
-       "4     It's primary day in New York and front-runners...    True\n",
-       "...                                                 ...     ...\n",
-       "6330  The State Department told the Republican Natio...    True\n",
-       "6331  The ‘P’ in PBS Should Stand for ‘Plutocratic’ ...   False\n",
-       "6332   Anti-Trump Protesters Are Tools of the Oligar...   False\n",
-       "6333  ADDIS ABABA, Ethiopia —President Obama convene...    True\n",
-       "6334  Jeb Bush Is Suddenly Attacking Trump. Here's W...    True\n",
-       "\n",
-       "[6335 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "validation_data=validation_data[['text','isFake']]\n",
-    "validation_data"
+    "validation_data=validation_data[['text','isFake']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 34,
    "id": "30ad5a2e",
    "metadata": {},
    "outputs": [],
@@ -1417,7 +1332,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 35,
+   "id": "478533f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy different Dataset: 50.370955011838994%\n"
+     ]
+    }
+   ],
+   "source": [
+    "#we print the accuracy of the model\n",
+    "accuracy = accuracy_score(validation_data_y, predictions)\n",
+    "print(f\"Accuracy different Dataset: {accuracy*100}%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "id": "7c6550b8",
    "metadata": {},
    "outputs": [
@@ -1446,23 +1381,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "id": "cbfe4924",
+   "execution_count": 37,
+   "id": "ab64d952",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.5037095501183899"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True Negative: 12.296764009471191%\n",
+      "False Positive: 37.64798737174428%\n",
+      "False Negative: 11.981057616416733%\n",
+      "True Positive: 38.0741910023678%\n"
+     ]
     }
    ],
    "source": [
-    "accuracy_score(validation_data_y,predictions)"
+    "#we print the percentage of True Positive, True Negative, False Positive and False Negative\n",
+    "tn, fp, fn, tp = cm.ravel()\n",
+    "total_samples = tn + fp + fn + tp\n",
+    "true_negative_percentage = (tn / total_samples) * 100\n",
+    "false_positive_percentage = (fp / total_samples) * 100\n",
+    "false_negative_percentage = (fn / total_samples) * 100\n",
+    "true_positive_percentage = (tp / total_samples) * 100\n",
+    "\n",
+    "print(f\"True Negative: {true_negative_percentage}%\")\n",
+    "print(f\"False Positive: {false_positive_percentage}%\")\n",
+    "print(f\"False Negative: {false_negative_percentage}%\")\n",
+    "print(f\"True Positive: {true_positive_percentage}%\")"
    ]
   },
   {
@@ -1480,38 +1426,6 @@
    "source": [
     "les évaluations et analyses approfondies de notre modèle confirment qu'il est extrêmement efficace et fiable pour l'identification des fake news. Ses performances élevées sur plusieurs métriques clés (accuracy,precision,recall,F1-score et ROC-AUC) démontrent sa capacité à fournir des prédictions précises et équilibrées, confortant notre choix d'utiliser ce modèle pour cette tache."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3fb32fee",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "98876bd2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "581fda88",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "92b90975",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
