documentation complete passive agressive bert

--- a/model_passive_agressive-BERT.ipynb
+++ b/model_passive_agressive-BERT.ipynb
@@ -43,7 +43,7 @@
     "from sklearn.model_selection import GridSearchCV #pour l'optimisation des hyperparametres.\n",
     "import time #pour étudier le temps d'execution d'entrainement, de notre meilleure modèle.\n",
     "import psutil #pour calculer la mémoire.\n",
-    "import os #pour calculer le temps d'execution.\n"
+    "import os #pour calculer le temps d'execution."
    ]
   },
   {
@@ -73,8 +73,6 @@
     "X = np.array(X.tolist())\n",
     "y = data['y']\n",
     "\n",
-    "X\n",
-    "# X is a dataframe with the data of the form : [101, 2202, 2117, 6221, 8398, 270...] transform it into numpy array\n",
     "X = np.array(X)\n",
     "y = np.array(y)"
    ]
@@ -93,41 +91,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "3375fc78",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from transformers import BertTokenizer, BertModel\n",
-    "\n",
-    "\n",
-    "# X = data['text_processed']\n",
-    "\n",
-    "# # Create the tokenizer\n",
-    "# tokenizer = BertTokenizer.from_pretrained('bert-base-uncased', do_lower_case=True)\n",
-    "# model_bert = BertModel.from_pretrained('bert-base-uncased')\n",
-    "\n",
-    "# # Set the maximum sequence length\n",
-    "# max_seq_length = 512\n",
-    "\n",
-    "# # Truncate or pad the tokenized sequences\n",
-    "# X = X.apply(lambda x: tokenizer.encode(x, add_special_tokens=True, max_length=max_seq_length, truncation=True, padding='max_length'))\n",
-    "# print(X)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "0acee052",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# y = data['isFake'].astype(int) #make it numerical\n",
-    "# print(y.value_counts())"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "id": "7871b302",
    "metadata": {},
@@ -136,16 +99,6 @@
     "# we separate the trdata into training test and validation\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "X_train, X_validation, y_train, y_validation = train_test_split(X_train, y_train, test_size=0.2, random_state=42)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "d5362e35",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np"
    ]
   },
   {
@@ -1360,6 +1313,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0fe9699e",
+   "metadata": {},
+   "source": [
+    "Le modèle utilise donc 0.00390625 Mo pour l'entrainement."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
    "id": "99903805",
@@ -1493,7 +1454,8 @@
    ],
    "source": [
     "acc=accuracy_score(y_pred,y_test)\n",
-    "print(f\"Notre modèle a une précision globale de {round(acc*100,2)}%, ce qui signifie qu'il prédit correctement les classes des instances dans {round(acc*100,2)}% des cas.\")"
+    "acc\n",
+    "print(f\"Notre modèle a une accuracy de {round(acc*100,2)}%, ce qui signifie qu'il a bien prédit {round(acc*100,2)}% des instances de notre jeu de test.\")"
    ]
   },
   {
@@ -1520,6 +1482,7 @@
    ],
    "source": [
     "precision=precision_score(y_test,y_pred)\n",
+    "precision\n",
     "print(f\"notre model a une precision de {round(precision*100,2)}% . lorsqu'il prédit une classe comme positive, il a raison dans {round(precision*100,2)}% des cas.\")"
    ]
   },
@@ -1547,7 +1510,8 @@
    ],
    "source": [
     "recall=recall_score(y_test,y_pred)\n",
-    "print(f\"notre model arrive a détecter {round(recall*100,2)}%. Donc sur l'ensemble des vrai positives, le modèle parvient à en identifier correctement {round(recall*100,2)}% des cas.\")"
+    "recall\n",
+    "print(f\"notre model a un recall de {round(recall*100,2)}% . notre model a pu détecter {round(recall*100,2)}% des vrais positifs.\")"
    ]
   },
   {
@@ -1574,7 +1538,12 @@
    ],
    "source": [
     "f1score=f1_score(y_test,y_pred)\n",
-    "print(f\"notre model a un F1-score de {round(f1score*100,2)}%, ce qui signifie que il y a un excellent equilibre entre le recall et la précision.\")"
+    "f1score\n",
+    "\n",
+    "if f1score<0.5:\n",
+    "    print(f\"notre model a un f1 score de {round(f1score*100,2)}% . Ce qui est une performance moyenne.\")\n",
+    "else:\n",
+    "    print(f\"notre model a un f1 score de {round(f1score*100,2)}% . Ce qui est une bonne performance.\")"
    ]
   },
   {
@@ -1623,21 +1592,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 32,
-   "id": "259c0a0f",
+   "cell_type": "markdown",
+   "id": "05bfcd14",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Le modèle a donc une score ROC-AUC de 0.5804982601636182 ce qui est très proche de 1, donc le modèle a une excellente capacité à différencier entres les Fake et les vrais news.\n"
-     ]
-    }
-   ],
    "source": [
-    "print(f\"Le modèle a donc une score ROC-AUC de {roc_auc} ce qui est très proche de 1, donc le modèle a une excellente capacité à différencier entres les Fake et les vrais news.\")"
+    "Le modèle a donc une score ROC-AUC de 0.58 ce qui n'est pas très proche de 1, ce qui signifie que notre modèle n'est pas en mesure de differencier les classes parfaitement."
    ]
   },
   {
@@ -1687,7 +1646,8 @@
     "L'axe des ordonnées (axe y) indique le taux de vrais positifs, qui correspond au pourcentage de fausses nouvelles que notre modèle a correctement identifiées comme telles.\n",
     "\n",
     "La courbe montante vers le coin supérieur gauche du graphique suggère que le modèle parvient à maintenir un taux élevé de vrais positifs tout en minimisant le taux de faux positifs, ce qui est le comportement idéal pour un classificateur. \n",
-    "Cette représentation représente la robustesse du mdoèle."
+    "\n",
+    "Dans le cas de ce modèle il est en mesure de prédire légèrement les des vrai positives, mais il devine les résultats majoritairement."
    ]
   },
   {
@@ -1811,6 +1771,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "47ad30cb",
+   "metadata": {},
+   "source": [
+    "On peut donc conlure que notre modèle est très bon à prédire les vrai négatives, mais qu'il prédit principalement des Faux négatives. Ce modèle est donc biaisé. Il n'est pas en mesure de correctement prédire les vrai positives."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9ed98ec1",
    "metadata": {},
    "source": [
@@ -1822,20 +1790,8 @@
    "id": "034d2e33",
    "metadata": {},
    "source": [
-    "les évaluations et analyses approfondies de notre modèle confirment qu'il est extrêmement efficace et fiable pour l'identification des fake news. Ses performances élevées sur plusieurs métriques clés (accuracy,precision,recall,F1-score et ROC-AUC) démontrent sa capacité à fournir des prédictions précises et équilibrées, confortant notre choix d'utiliser ce modèle pour cette tache."
+    "l'algorithme Passive-Aggressive dans ce contexte montre des limites considérables, notamment une difficulté à généraliser sur de nouveaux datasets. Cela peut être dû à plusieurs facteurs comme l'insuffisance du modèle pour traiter des features complexes des données textuelles, ou peut-être le modèle nécessite un réglage plus fin des paramètres ou l'utilisation d'une approche de feature engineering plus sophistiquée. Il serait interessant de tester d'autres modèles."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d3421aec",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8cc255e5",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
