--- a/OpenAI_API_model.ipynb
+++ b/OpenAI_API_model.ipynb
@@ -4,7 +4,30 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: openai in c:\\users\\rymkm\\anaconda3\\lib\\site-packages (1.28.0)Note: you may need to restart the kernel to use updated packages.\n",
+      "\n",
+      "Requirement already satisfied: anyio<5,>=3.5.0 in c:\\users\\rymkm\\anaconda3\\lib\\site-packages (from openai) (3.7.1)\n",
+      "Requirement already satisfied: distro<2,>=1.7.0 in c:\\users\\rymkm\\anaconda3\\lib\\site-packages (from openai) (1.9.0)\n",
+      "Requirement already satisfied: httpx<1,>=0.23.0 in c:\\users\\rymkm\\anaconda3\\lib\\site-packages (from openai) (0.27.0)\n",
+      "Requirement already satisfied: pydantic<3,>=1.9.0 in c:\\users\\rymkm\\anaconda3\\lib\\site-packages (from openai) (2.1.1)\n",
+      "Requirement already satisfied: sniffio in c:\\users\\rymkm\\anaconda3\\lib\\site-packages (from openai) (1.3.0)\n",
+      "Requirement already satisfied: tqdm>4 in c:\\users\\rymkm\\anaconda3\\lib\\site-packages (from openai) (4.66.1)\n",
+      "Requirement already satisfied: typing-extensions<5,>=4.7 in c:\\users\\rymkm\\anaconda3\\lib\\site-packages (from openai) (4.10.0)\n",
+      "Requirement already satisfied: idna>=2.8 in c:\\users\\rymkm\\anaconda3\\lib\\site-packages (from anyio<5,>=3.5.0->openai) (3.4)\n",
+      "Requirement already satisfied: certifi in c:\\users\\rymkm\\anaconda3\\lib\\site-packages (from httpx<1,>=0.23.0->openai) (2024.2.2)\n",
+      "Requirement already satisfied: httpcore==1.* in c:\\users\\rymkm\\anaconda3\\lib\\site-packages (from httpx<1,>=0.23.0->openai) (1.0.5)\n",
+      "Requirement already satisfied: h11<0.15,>=0.13 in c:\\users\\rymkm\\anaconda3\\lib\\site-packages (from httpcore==1.*->httpx<1,>=0.23.0->openai) (0.14.0)\n",
+      "Requirement already satisfied: annotated-types>=0.4.0 in c:\\users\\rymkm\\anaconda3\\lib\\site-packages (from pydantic<3,>=1.9.0->openai) (0.5.0)\n",
+      "Requirement already satisfied: pydantic-core==2.4.0 in c:\\users\\rymkm\\anaconda3\\lib\\site-packages (from pydantic<3,>=1.9.0->openai) (2.4.0)\n",
+      "Requirement already satisfied: colorama in c:\\users\\rymkm\\anaconda3\\lib\\site-packages (from tqdm>4->openai) (0.4.6)\n"
+     ]
+    }
+   ],
    "source": [
     "%pip install openai\n",
     "from openai import OpenAI\n",
@@ -23,9 +46,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'OPENAI_API_KEY'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mconfig.json\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[0;32m      3\u001b[0m     data \u001b[38;5;241m=\u001b[39m json\u001b[38;5;241m.\u001b[39mload(f)\n\u001b[1;32m----> 4\u001b[0m     api_key \u001b[38;5;241m=\u001b[39m data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mOPENAI_API_KEY\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m      5\u001b[0m     f\u001b[38;5;241m.\u001b[39mclose()\n\u001b[0;32m      7\u001b[0m client \u001b[38;5;241m=\u001b[39m OpenAI(\n\u001b[0;32m      8\u001b[0m     api_key\u001b[38;5;241m=\u001b[39mapi_key\n\u001b[0;32m      9\u001b[0m )\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'OPENAI_API_KEY'"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "#get the openai api key from config.json file.\n",
     "with open('config.json') as f:\n",
