--- a/OpenAI_API_model.ipynb
+++ b/OpenAI_API_model.ipynb
@@ -891,18 +891,34 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Utilisation  de vr AI"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "vrAI = 0\n",
+    "if acc > 0.90:\n",
+    "    vrAI = 'A'\n",
+    "elif  0.70<acc<=0.90:\n",
+    "    vrAI = 'B'\n",
+    "elif  0.50<acc<=0.70:\n",
+    "    vrAI = 'C'\n",
+    "elif  0.30<acc<=0.50:\n",
+    "    vrAI = 'D'\n",
+    "elif  0.15<acc<=0.30:\n",
+    "    vrAI = 'E'\n",
+    "elif  0.05<acc<=0.15:\n",
+    "    vrAI = 'F'\n",
+    "else:\n",
+    "    vrAI = 'Fx'"
+   ]
   }
  ],
  "metadata": {
