--- a/model_decision_tree.ipynb
+++ b/model_decision_tree.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
        "4  washington reuter presid donald trump say thur...   False  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
        "Index(['title_processed', 'text_processed', 'isFake'], dtype='object')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,20 +168,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "ename": "MemoryError",
-     "evalue": "Unable to allocate 33.4 GiB for an array with shape (33276, 134879) and data type float64",
+     "evalue": "Unable to allocate 27.5 GiB for an array with shape (29116, 126692) and data type float64",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mMemoryError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[10], line 9\u001b[0m\n\u001b[0;32m      6\u001b[0m tfidf_vectorizer\u001b[38;5;241m=\u001b[39mTfidfVectorizer(use_idf\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m      8\u001b[0m \u001b[38;5;66;03m# On fit et transforme les données d'entrainement.\u001b[39;00m\n\u001b[1;32m----> 9\u001b[0m tfidf_train\u001b[38;5;241m=\u001b[39mtfidf_vectorizer\u001b[38;5;241m.\u001b[39mfit_transform(X_train)\u001b[38;5;241m.\u001b[39mtoarray()\n\u001b[0;32m     11\u001b[0m \u001b[38;5;66;03m# on transfomer uniquement le test set, sinon il va connaitre les données test...\u001b[39;00m\n\u001b[0;32m     12\u001b[0m tfidf_test\u001b[38;5;241m=\u001b[39mtfidf_vectorizer\u001b[38;5;241m.\u001b[39mtransform(X_test)\n",
+      "Cell \u001b[1;32mIn[15], line 9\u001b[0m\n\u001b[0;32m      6\u001b[0m tfidf_vectorizer\u001b[38;5;241m=\u001b[39mTfidfVectorizer(use_idf\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m      8\u001b[0m \u001b[38;5;66;03m# On fit et transforme les données d'entrainement.\u001b[39;00m\n\u001b[1;32m----> 9\u001b[0m tfidf_train\u001b[38;5;241m=\u001b[39mtfidf_vectorizer\u001b[38;5;241m.\u001b[39mfit_transform(X_train)\u001b[38;5;241m.\u001b[39mtoarray()\n\u001b[0;32m     11\u001b[0m \u001b[38;5;66;03m# on transfomer uniquement le test set, sinon il va connaitre les données test...\u001b[39;00m\n\u001b[0;32m     12\u001b[0m tfidf_test\u001b[38;5;241m=\u001b[39mtfidf_vectorizer\u001b[38;5;241m.\u001b[39mtransform(X_test)\n",
       "File \u001b[1;32mc:\\Users\\rymkm\\anaconda3\\Lib\\site-packages\\scipy\\sparse\\_compressed.py:1050\u001b[0m, in \u001b[0;36m_cs_matrix.toarray\u001b[1;34m(self, order, out)\u001b[0m\n\u001b[0;32m   1048\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m out \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m order \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m   1049\u001b[0m     order \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_swap(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcf\u001b[39m\u001b[38;5;124m'\u001b[39m)[\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m-> 1050\u001b[0m out \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_process_toarray_args(order, out)\n\u001b[0;32m   1051\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (out\u001b[38;5;241m.\u001b[39mflags\u001b[38;5;241m.\u001b[39mc_contiguous \u001b[38;5;129;01mor\u001b[39;00m out\u001b[38;5;241m.\u001b[39mflags\u001b[38;5;241m.\u001b[39mf_contiguous):\n\u001b[0;32m   1052\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mOutput array must be C or F contiguous\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
       "File \u001b[1;32mc:\\Users\\rymkm\\anaconda3\\Lib\\site-packages\\scipy\\sparse\\_base.py:1267\u001b[0m, in \u001b[0;36m_spbase._process_toarray_args\u001b[1;34m(self, order, out)\u001b[0m\n\u001b[0;32m   1265\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m out\n\u001b[0;32m   1266\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m-> 1267\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m np\u001b[38;5;241m.\u001b[39mzeros(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mshape, dtype\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdtype, order\u001b[38;5;241m=\u001b[39morder)\n",
-      "\u001b[1;31mMemoryError\u001b[0m: Unable to allocate 33.4 GiB for an array with shape (33276, 134879) and data type float64"
+      "\u001b[1;31mMemoryError\u001b[0m: Unable to allocate 27.5 GiB for an array with shape (29116, 126692) and data type float64"
      ]
     }
    ],
@@ -189,7 +189,7 @@
     "X=data.drop(['isFake'],axis=1)\n",
     "y=data['isFake']\n",
     "#spearation en données d'entrainement et de test.\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X['text_processed'], y, test_size=0.2, random_state=42)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X['text_processed'], y, test_size=0.3, random_state=42)\n",
     "\n",
     "tfidf_vectorizer=TfidfVectorizer(use_idf=True)\n",
     "\n",
@@ -549,13 +549,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "## Tester le modele avec les données clean"
+    "vrAI = 0\n",
+    "acc = accuracy_score(y_pred,y_test)\n",
+    "if acc > 0.90:\n",
+    "    vrAI = 'A'\n",
+    "elif  0.70<acc<=0.90:\n",
+    "    vrAI = 'B'\n",
+    "elif  0.50<acc<=0.70:\n",
+    "    vrAI = 'C'\n",
+    "elif  0.30<acc<=0.50:\n",
+    "    vrAI = 'D'\n",
+    "elif  0.15<acc<=0.30:\n",
+    "    vrAI = 'E'\n",
+    "elif  0.05<acc<=0.15:\n",
+    "    vrAI = 'F'\n",
+    "else:\n",
+    "    vrAI = 'Fx'"
    ]
   },
   {
