--- a/model_logistic_regression-BERT.ipynb
+++ b/model_logistic_regression-BERT.ipynb
@@ -1123,6 +1123,37 @@
     "\n",
     "Pour améliorer la fiabilité et l'efficacité du modèle dans de nouveaux contextes, il est recommandé d'ajuster les hyperparamètres, d'améliorer le traitement des données, ou d'intégrer des techniques de régularisation plus strictes. Il faut que le modèle arrive mieux à généraliser."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## vrAI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vrAI = 0\n",
+    "acc = accuracy_score(validation_data_y, predictions)\n",
+    "if acc > 0.90:\n",
+    "    vrAI = 'A'\n",
+    "elif  0.70<acc<=0.90:\n",
+    "    vrAI = 'B'\n",
+    "elif  0.50<acc<=0.70:\n",
+    "    vrAI = 'C'\n",
+    "elif  0.30<acc<=0.50:\n",
+    "    vrAI = 'D'\n",
+    "elif  0.15<acc<=0.30:\n",
+    "    vrAI = 'E'\n",
+    "elif  0.05<acc<=0.15:\n",
+    "    vrAI = 'F'\n",
+    "else:\n",
+    "    vrAI = 'Fx'"
+   ]
   }
  ],
  "metadata": {
