--- a/model_decision_tree-BERT.ipynb
+++ b/model_decision_tree-BERT.ipynb
@@ -1192,7 +1192,33 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## vrAI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vrAI = 0\n",
+    "acc = accuracy_score(validation_data_y, predictions)\n",
+    "if acc > 0.90:\n",
+    "    vrAI = 'A'\n",
+    "elif  0.70<acc<=0.90:\n",
+    "    vrAI = 'B'\n",
+    "elif  0.50<acc<=0.70:\n",
+    "    vrAI = 'C'\n",
+    "elif  0.30<acc<=0.50:\n",
+    "    vrAI = 'D'\n",
+    "elif  0.15<acc<=0.30:\n",
+    "    vrAI = 'E'\n",
+    "elif  0.05<acc<=0.15:\n",
+    "    vrAI = 'F'\n",
+    "else:\n",
+    "    vrAI = 'Fx'"
+   ]
   }
  ],
  "metadata": {
