--- a/model_passive_agressive-BERT.ipynb
+++ b/model_passive_agressive-BERT.ipynb
@@ -1794,6 +1794,39 @@
    "source": [
     "l'algorithme Passive-Aggressive dans ce contexte montre des limites considérables, notamment une difficulté à généraliser sur de nouveaux datasets. Cela peut être dû à plusieurs facteurs comme l'insuffisance du modèle pour traiter des features complexes des données textuelles, ou peut-être le modèle nécessite un réglage plus fin des paramètres ou l'utilisation d'une approche de feature engineering plus sophistiquée. Il serait interessant de tester d'autres modèles."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b61ffd3",
+   "metadata": {},
+   "source": [
+    "## L'utilisation du vrAI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "057c02da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vrAI = 0\n",
+    "acc = accuracy \n",
+    "if acc > 0.90:\n",
+    "    vrAI = 'A'\n",
+    "elif  0.70<acc<=0.90:\n",
+    "    vrAI = 'B'\n",
+    "elif  0.50<acc<=0.70:\n",
+    "    vrAI = 'C'\n",
+    "elif  0.30<acc<=0.50:\n",
+    "    vrAI = 'D'\n",
+    "elif  0.15<acc<=0.30:\n",
+    "    vrAI = 'E'\n",
+    "elif  0.05<acc<=0.15:\n",
+    "    vrAI = 'F'\n",
+    "else:\n",
+    "    vrAI = 'Fx'"
+   ]
   }
  ],
  "metadata": {
