--- a/model_logistic_regression.ipynb
+++ b/model_logistic_regression.ipynb
@@ -217,19 +217,19 @@
     "vrAI = 0\n",
     "acc = logreg.score(tfidf_test, y_test)\n",
     "if acc > 0.90:\n",
-    "    vrAI = 'A'\n",
+    "    vrAI = 'Fx'\n",
     "elif  0.70<acc<=0.90:\n",
-    "    vrAI = 'B'\n",
+    "    vrAI = 'F'\n",
     "elif  0.50<acc<=0.70:\n",
-    "    vrAI = 'C'\n",
+    "    vrAI = 'E'\n",
     "elif  0.30<acc<=0.50:\n",
     "    vrAI = 'D'\n",
     "elif  0.15<acc<=0.30:\n",
-    "    vrAI = 'E'\n",
+    "    vrAI = 'C'\n",
     "elif  0.05<acc<=0.15:\n",
-    "    vrAI = 'F'\n",
+    "    vrAI = 'B'\n",
     "else:\n",
-    "    vrAI = 'Fx'"
+    "    vrAI = 'A'"
    ]
   }
  ],
